<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/pref_cat_video">
        <de.mrapp.android.preference.ListPreference
            android:entries="@array/pref_orientation_titles"
            android:title="@string/pref_orientation"
            android:key="orientation"
            android:defaultValue="landscape"
            android:entryValues="@array/pref_orientation_values"
            app:iconSpaceReserved="false"
            app:showValueAsSummary="true"/>
    </PreferenceCategory>
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/pref_cat_input">
        <de.mrapp.android.preference.ListPreference
            android:entries="@array/pref_stylus_type_titles"
            android:title="@string/pref_stylus_type"
            android:key="stylus_type"
            android:defaultValue="0"
            android:entryValues="@array/pref_stylus_type_values"
            app:iconSpaceReserved="false"
            app:showValueAsSummary="true"/>
        <de.mrapp.android.preference.ActionPreference
            android:textColor="@color/colorAccent"
            android:title="@string/pref_stylus_calibrate_title"
            android:key="stylus_calibrate"
            app:iconSpaceReserved="false"/>
        <com.kelocube.mirrorclient.ui.MyDialogPreference
            android:title="@string/pref_button_func_title"
            android:key="button_func"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/pref_cat_action_menu">
        <de.mrapp.android.preference.SwitchPreference
            android:title="@string/pref_action_menu_show_title"
            android:key="session_menu_show"
            android:defaultValue="true"
            app:iconSpaceReserved="false"/>
        <de.mrapp.android.preference.MultiChoiceListPreference
            android:entries="@array/pref_session_menu_modes_titles"
            android:title="@string/session_menu_modes_title"
            android:key="session_menu_modes"
            android:defaultValue="@array/pref_session_menu_modes_default"
            android:dialogMessage="@string/session_menu_modes_summary"
            android:entryValues="@array/pref_session_menu_modes_values"
            app:iconSpaceReserved="false"
            app:showValueAsSummary="true"/>
        <de.mrapp.android.preference.ActionPreference
            android:textColor="@color/colorAccent"
            android:title="@string/pref_action_menu_customize_title"
            android:key="session_menu_customize"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/pref_cat_connect">
        <de.mrapp.android.preference.SwitchPreference
            android:title="@string/pref_autoconnect"
            android:key="autoconnect"
            android:defaultValue="true"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/pref_cat_error_reports">
        <de.mrapp.android.preference.SwitchPreference
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="allow_error_reports"
            app:summary="@string/pref_error_reports_info"
            app:title="@string/pref_allow_error_reports"/>
    </PreferenceCategory>
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:summary="@string/pref_cat_advanced_summary"
        app:title="@string/pref_cat_advanced">
        <de.mrapp.android.preference.ListPreference
            android:entries="@array/pref_sampling_keys"
            android:title="@string/pref_sampling_title"
            android:key="sampling"
            android:defaultValue="0"
            android:dialogMessage="@string/pref_sampling_summary"
            android:entryValues="@array/pref_sampling_values"
            app:iconSpaceReserved="false"
            app:showValueAsSummary="true"/>
        <de.mrapp.android.preference.SeekBarPreference
            android:max="100"
            android:title="@string/pref_quality"
            android:key="quality"
            android:defaultValue="80"
            android:dialogTitle="@string/pref_quality"
            android:dialogMessage="@string/pref_quality_summary"
            app:decimals="0"
            app:dialogButtonTextColor="@color/colorPrimary"
            app:iconSpaceReserved="false"
            app:min="0"
            app:showProgress="true"
            app:showValueAsSummary="true"/>
        <de.mrapp.android.preference.ListPreference
            android:title="@string/pref_resolution_title"
            android:key="resolution"
            android:dialogMessage="@string/pref_resolution_summary"
            app:iconSpaceReserved="false"
            app:showValueAsSummary="true"/>
        <de.mrapp.android.preference.ListPreference
            android:entries="@array/pref_framerate_keys"
            android:title="@string/pref_framerate_title"
            android:key="framerate"
            android:defaultValue="60"
            android:dialogMessage="@string/pref_framerate_summary"
            android:entryValues="@array/pref_framerate_values"
            app:iconSpaceReserved="false"
            app:showValueAsSummary="true"/>
        <de.mrapp.android.preference.SwitchPreference
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="pref_force_software_encoder"
            app:summary="@string/pref_force_software_encoder_summary"
            app:title="@string/pref_force_software_encoder_title"/>
        <de.mrapp.android.preference.NumberPickerPreference
            android:max="5"
            android:title="@string/pref_test_id_title"
            android:key="test_id"
            android:defaultValue="0"
            android:dialogMessage="@string/pref_test_id_summary"
            app:iconSpaceReserved="false"
            app:min="0"
            app:showValueAsSummary="true"/>
        <de.mrapp.android.preference.Preference
            android:title="@string/pref_ip_address"
            android:key="ip_address"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
