<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"/>
    <com.kelocube.mirrorclient.ui.InstantAutoCompleteView
        android:id="@+id/key_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/dialog_edit_action_select_key"/>
    <LinearLayout
        android:gravity="start"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">
        <CheckBox
            android:id="@+id/mod_ctrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_ctrl"/>
        <CheckBox
            android:id="@+id/mod_alt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_alt"
            android:layout_marginStart="16dp"/>
        <CheckBox
            android:id="@+id/mod_shift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_shift"
            android:layout_marginStart="16dp"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="end"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">
        <Button
            android:textColor="@color/colorOnPrimary"
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/word_cancel"
            android:layout_marginEnd="8dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
        <Button
            android:textColor="@color/colorOnAccent"
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/word_ok"
            android:layout_marginEnd="8dp"
            style="@style/PrimaryButton"/>
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>
