<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/billing_trial_expired_title"/>
    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:id="@+id/text_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/billing_trial_expired_message"/>
    <TextView
        android:textSize="24sp"
        android:id="@+id/text_discount"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/billing_discount"
        android:textAllCaps="false"
        android:fontFamily="@font/fira_sans_extralight"
        android:textAlignment="center"/>
    <LinearLayout
        android:gravity="right"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">
        <Button
            android:textColor="@color/colorOnPrimary"
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/billing_trial_later"
            android:layout_marginEnd="8dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
        <Button
            android:textColor="@color/colorBuy"
            android:id="@+id/button_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/billing_trial_buy"
            style="@style/BuyButton"/>
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>
