<?xml version="1.0" encoding="utf-8"?>
<view xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/layout_root"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    class="com.kelocube.mirrorclient.ui.CalibrateStylusActivity$DrawView">
    <TextView
        android:textColor="@color/colorOnBackground"
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pref_stylus_calibrate_desc"/>
    <LinearLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">
        <ImageView
            android:background="@drawable/circle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="center"
            android:layout_marginEnd="8dp"
            app:srcCompat="@drawable/ic_lead_pencil"/>
        <TextView
            android:textColor="@color/colorOnBackground"
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_stylus_calibrate_desc_2"/>
    </LinearLayout>
    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
    <com.google.android.material.slider.RangeSlider
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:thumbColor="@color/colorAccent"
        app:trackColorActive="@color/colorAccentDark"/>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/word_cancel"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/button_reset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/word_reset"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/button_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/word_save"
            android:layout_weight="1"
            style="@style/PrimaryButton"/>
    </LinearLayout>
</view>
