<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_root"
    android:background="@drawable/back_waiting"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1">
    <View
        android:id="@+id/back_view"
        android:background="@drawable/back_connected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"/>
    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin">
        <ImageView
            android:id="@+id/imageView"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:maxWidth="260dp"
            android:layout_weight="1"
            android:elevation="2dp"
            app:srcCompat="0x7f0800d0"/>
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:animateLayoutChanges="true">
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">
                <ProgressBar
                    android:id="@+id/pbar_status"
                    android:layout_width="30sp"
                    android:layout_height="30sp"
                    android:indeterminate="true"
                    android:layout_marginEnd="12dp"
                    android:indeterminateTint="#ffffff"
                    style="?android:attr/progressBarStyle"/>
                <TextView
                    android:textSize="30sp"
                    android:textColor="@android:color/white"
                    android:id="@+id/text_status_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fira_sans_extralight"
                    android:textAlignment="center"/>
            </LinearLayout>
            <TextView
                android:textColor="@android:color/white"
                android:textColorLink="@color/colorOnPrimary"
                android:id="@+id/text_status_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textAlignment="center"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin">
        <Button
            android:textColor="@color/colorBuy"
            android:id="@+id/button_purchase"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_purchase"
            app:icon="@drawable/ic_shop_black_24dp"
            app:iconTint="@color/colorBuy"
            style="@style/BuyButton"/>
        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <ImageButton
            android:id="@+id/button_about"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:tint="#ffffff"
            android:contentDescription="@string/about_label"
            app:srcCompat="@drawable/ic_info_outline_32dp"/>
        <ImageButton
            android:id="@+id/button_settings"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:tint="#ffffff"
            android:contentDescription="@string/settings_label"
            app:srcCompat="@drawable/ic_settings_32dp"/>
    </LinearLayout>
</FrameLayout>
